tests/NormalTests/paczka1/fuzzy1/70651836.err
Error in line 2: WVchAvm1GYX S50 78,7
Error in line 12: mMwk S50 80,1
Error in line 24: mMwk S50 58,1
Error in line 34: mMwk A662 26,1
Error in line 36: mMwk S50 66,9
